Source/WebCore/platform/text/BidiResolver.h
@@ -203,20 +203,16 @@ enum VisualDirectionOverride {
 
 // BidiResolver is WebKit's implementation of the Unicode Bidi Algorithm
 // http://unicode.org/reports/tr9
-template <class Iterator, class Run> class BidiResolver {
-    WTF_MAKE_NONCOPYABLE(BidiResolver);
+template <class Iterator, class Run, class Subclass> class BidiResolverBase {
+    WTF_MAKE_NONCOPYABLE(BidiResolverBase);
 public:
-    BidiResolver()
+    BidiResolverBase()
         : m_direction(U_OTHER_NEUTRAL)
         , m_reachedEndOfLine(false)
         , m_emptyRun(true)
         , m_nestedIsolateCount(0)
     {
     }
-
-#ifndef NDEBUG
-    ~BidiResolver();
-#endif
 
     const Iterator& position() const { return m_current; }
     void setPositionIgnoringNestedIsolates(const Iterator& position) { m_current = position; }
@@ -226,7 +222,7 @@ public:
         m_nestedIsolateCount = nestedIsolatedCount;
     }
 
-    void increment() { m_current.increment(); }
+    void increment() { static_cast<Subclass*>(this)->incrementInternal(); }
 
     BidiContext* context() const { return m_status.context.get(); }
     void setContext(PassRefPtr<BidiContext> c) { m_status.context = c; }
@@ -261,14 +257,13 @@ public:
     // It's unclear if this is still needed.
     void markCurrentRunEmpty() { m_emptyRun = true; }
 
-    Vector<Run*>& isolatedRuns() { return m_isolatedRuns; }
     void setMidpointForIsolatedRun(Run*, unsigned);
     unsigned midpointForIsolatedRun(Run*);
 
 protected:
     // FIXME: Instead of InlineBidiResolvers subclassing this method, we should
     // pass in some sort of Traits object which knows how to create runs for appending.
-    void appendRun();
+    void appendRun() { static_cast<Subclass*>(this)->appendRunInternal(); }
 
     Iterator m_current;
     // sor and eor are "start of run" and "end of run" respectively and correpond
@@ -290,7 +285,6 @@ protected:
     MidpointState<Iterator> m_midpointState;
 
     unsigned m_nestedIsolateCount;
-    Vector<Run*> m_isolatedRuns;
     HashMap<Run*, unsigned> m_midpointForIsolatedRun;
 
 private:
@@ -300,21 +294,42 @@ private:
 
     void updateStatusLastFromCurrentDirection(UCharDirection);
     void reorderRunsFromLevels();
+    void incrementInternal() { m_current.increment(); }
+    void appendRunInternal();
 
     Vector<BidiEmbedding, 8> m_currentExplicitEmbeddingSequence;
 };
 
-#ifndef NDEBUG
 template <class Iterator, class Run>
-BidiResolver<Iterator, Run>::~BidiResolver()
+class BidiResolver : public BidiResolverBase<Iterator, Run, BidiResolver<Iterator, Run>> {
+};
+
+template <class Iterator, class Run, class IsolateRun>
+class BidiResolverWithIsolate : public BidiResolverBase<Iterator, Run, BidiResolverWithIsolate<Iterator, Run, IsolateRun>> {
+public:
+#ifndef NDEBUG
+    ~BidiResolverWithIsolate();
+#endif
+
+    void incrementInternal();
+    void appendRunInternal();
+    Vector<Run*>& isolatedRuns() { return m_isolatedRuns; }
+
+private:
+    Vector<Run*> m_isolatedRuns;
+};
+
+#ifndef NDEBUG
+template <class Iterator, class Run, class IsolateRun>
+BidiResolverWithIsolate<Iterator, Run, IsolateRun>::~BidiResolverWithIsolate()
 {
     // The owner of this resolver should have handled the isolated runs.
     ASSERT(m_isolatedRuns.isEmpty());
 }
 #endif
 
-template <class Iterator, class Run>
-void BidiResolver<Iterator, Run>::appendRun()
+template <class Iterator, class Run, class Subclass>
+void BidiResolverBase<Iterator, Run, Subclass>::appendRunInternal()
 {
     if (!m_emptyRun && !m_eor.atEnd()) {
         unsigned startOffset = m_sor.offset();
@@ -336,8 +351,8 @@ void BidiResolver<Iterator, Run>::appendRun()
     m_status.eor = U_OTHER_NEUTRAL;
 }
 
-template <class Iterator, class Run>
-void BidiResolver<Iterator, Run>::embed(UCharDirection dir, BidiEmbeddingSource source)
+template <class Iterator, class Run, class Subclass>
+void BidiResolverBase<Iterator, Run, Subclass>::embed(UCharDirection dir, BidiEmbeddingSource source)
 {
     // Isolated spans compute base directionality during their own UBA run.
     // Do not insert fake embed characters once we enter an isolated span.
@@ -347,8 +362,8 @@ void BidiResolver<Iterator, Run>::embed(UCharDirection dir, BidiEmbeddingSource 
     m_currentExplicitEmbeddingSequence.append(BidiEmbedding(dir, source));
 }
 
-template <class Iterator, class Run>
-void BidiResolver<Iterator, Run>::checkDirectionInLowerRaiseEmbeddingLevel()
+template <class Iterator, class Run, class Subclass>
+void BidiResolverBase<Iterator, Run, Subclass>::checkDirectionInLowerRaiseEmbeddingLevel()
 {
     ASSERT(m_status.eor != U_OTHER_NEUTRAL || m_eor.atEnd());
     ASSERT(m_status.last != U_DIR_NON_SPACING_MARK
@@ -362,8 +377,8 @@ void BidiResolver<Iterator, Run>::checkDirectionInLowerRaiseEmbeddingLevel()
         m_direction = m_status.lastStrong == U_LEFT_TO_RIGHT ? U_LEFT_TO_RIGHT : U_RIGHT_TO_LEFT;
 }
 
-template <class Iterator, class Run>
-void BidiResolver<Iterator, Run>::lowerExplicitEmbeddingLevel(UCharDirection from)
+template <class Iterator, class Run, class Subclass>
+void BidiResolverBase<Iterator, Run, Subclass>::lowerExplicitEmbeddingLevel(UCharDirection from)
 {
     if (!m_emptyRun && m_eor != m_last) {
         checkDirectionInLowerRaiseEmbeddingLevel();
@@ -398,8 +413,8 @@ void BidiResolver<Iterator, Run>::lowerExplicitEmbeddingLevel(UCharDirection fro
     m_eor = Iterator();
 }
 
-template <class Iterator, class Run>
-void BidiResolver<Iterator, Run>::raiseExplicitEmbeddingLevel(UCharDirection from, UCharDirection to)
+template <class Iterator, class Run, class Subclass>
+void BidiResolverBase<Iterator, Run, Subclass>::raiseExplicitEmbeddingLevel(UCharDirection from, UCharDirection to)
 {
     if (!m_emptyRun && m_eor != m_last) {
         checkDirectionInLowerRaiseEmbeddingLevel();
@@ -435,8 +450,8 @@ void BidiResolver<Iterator, Run>::raiseExplicitEmbeddingLevel(UCharDirection fro
     m_eor = Iterator();
 }
 
-template <class Iterator, class Run>
-bool BidiResolver<Iterator, Run>::commitExplicitEmbedding()
+template <class Iterator, class Run, class Subclass>
+bool BidiResolverBase<Iterator, Run, Subclass>::commitExplicitEmbedding()
 {
     // When we're "inIsolate()" we're resolving the parent context which
     // ignores (skips over) the isolated content, including embedding levels.
@@ -478,8 +493,8 @@ bool BidiResolver<Iterator, Run>::commitExplicitEmbedding()
     return fromLevel != toLevel;
 }
 
-template <class Iterator, class Run>
-inline void BidiResolver<Iterator, Run>::updateStatusLastFromCurrentDirection(UCharDirection dirCurrent)
+template <class Iterator, class Run, class Subclass>
+inline void BidiResolverBase<Iterator, Run, Subclass>::updateStatusLastFromCurrentDirection(UCharDirection dirCurrent)
 {
     switch (dirCurrent) {
     case U_EUROPEAN_NUMBER_TERMINATOR:
@@ -519,8 +534,8 @@ inline void BidiResolver<Iterator, Run>::updateStatusLastFromCurrentDirection(UC
     }
 }
 
-template <class Iterator, class Run>
-inline void BidiResolver<Iterator, Run>::reorderRunsFromLevels()
+template <class Iterator, class Run, class Subclass>
+inline void BidiResolverBase<Iterator, Run, Subclass>::reorderRunsFromLevels()
 {
     unsigned char levelLow = 128;
     unsigned char levelHigh = 0;
@@ -556,8 +571,8 @@ inline void BidiResolver<Iterator, Run>::reorderRunsFromLevels()
     }
 }
 
-template <class Iterator, class Run>
-void BidiResolver<Iterator, Run>::createBidiRunsForLine(const Iterator& end, VisualDirectionOverride override, bool hardLineBreak)
+template <class Iterator, class Run, class Subclass>
+void BidiResolverBase<Iterator, Run, Subclass>::createBidiRunsForLine(const Iterator& end, VisualDirectionOverride override, bool hardLineBreak)
 {
     ASSERT(m_direction == U_OTHER_NEUTRAL);
 
@@ -583,7 +598,7 @@ void BidiResolver<Iterator, Run>::createBidiRunsForLine(const Iterator& end, Vis
 
     m_last = m_current;
     bool pastEnd = false;
-    BidiResolver<Iterator, Run> stateAtEnd;
+    BidiResolverBase<Iterator, Run, Subclass> stateAtEnd;
 
     while (true) {
         UCharDirection dirCurrent;
@@ -956,15 +971,15 @@ void BidiResolver<Iterator, Run>::createBidiRunsForLine(const Iterator& end, Vis
     endOfLine = Iterator();
 }
 
-template <class Iterator, class Run>
-void BidiResolver<Iterator, Run>::setMidpointForIsolatedRun(Run* run, unsigned midpoint)
+template <class Iterator, class Run, class Subclass>
+void BidiResolverBase<Iterator, Run, Subclass>::setMidpointForIsolatedRun(Run* run, unsigned midpoint)
 {
     ASSERT(!m_midpointForIsolatedRun.contains(run));
     m_midpointForIsolatedRun.add(run, midpoint);
 }
 
-template<class Iterator, class Run>
-unsigned BidiResolver<Iterator, Run>::midpointForIsolatedRun(Run* run)
+template<class Iterator, class Run, class Subclass>
+unsigned BidiResolverBase<Iterator, Run, Subclass>::midpointForIsolatedRun(Run* run)
 {
     return m_midpointForIsolatedRun.take(run);
 }
